# network-calculator

./: README.md
calculator_client/: CMakeLists.txt  client.cpp  client.h  main.cpp  main.qml
calculator_server/: CMakeLists.txt  calculator.cpp  calculator.h  calculatorthread.cpp  calculatorthread.h  main.cpp  server.cpp  server.h
calculator_server/gtests/: CMakeLists.txt  test.cpp
